.k8s-manifests/apps/ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: ntfy
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: ntfy
      app.kubernetes.io/name: ntfy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: cb1745118344af31c16378d7f678f0baf2d74a42564b9f416ea5d5627da34ec1
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: ntfy
        app.kubernetes.io/name: ntfy
    spec:
      automountServiceAccountToken: true
      containers:
        - command:
            - ntfy
            - serve
            - --config
            - /var/lib/ntfy/config.yml
          image: docker.io/binwiederhier/ntfy:v2.15.0@sha256:aa10e84da624f65be107f9317dbf6e212fa812e0ebf62e74d032d0762eccc930
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/ntfy/config.yml
              name: config
              readOnly: true
              subPath: config.yml
            - mountPath: /data
              name: main
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - configMap:
            items:
              - key: config.yml
                path: config.yml
            name: ntfy
          name: config
        - name: main
          persistentVolumeClaim:
            claimName: ntfy
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.114
    lbipam.cilium.io/sharing-key: ntfy
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/service: ntfy
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: ntfy
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: ntfy
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: ntfy.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ntfy.josevictor.me
      secretName: wildcard-tls
