.k8s-manifests/apps/open-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/version: 0.6.26
    helm.sh/chart: open-webui-8.1.0
  name: open-webui
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: open-webui
      app.kubernetes.io/instance: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/version: 0.6.26
        helm.sh/chart: open-webui-8.1.0
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: WEBUI_URL
              value: https://openwebui.josevictor.me
            - name: ENABLE_OLLAMA_API
              value: 'False'
            - name: OPENAI_API_BASE_URL
              value: https://openrouter.ai/api/v1
            - name: STORAGE_PROVIDER
              value: s3
            - name: S3_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: AWS_ACCESS_KEY_ID
                  name: open-webui-s3
            - name: S3_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: AWS_SECRET_ACCESS_KEY
                  name: open-webui-s3
            - name: S3_ENDPOINT_URL
              value: http://rook-ceph-rgw-ceph-objectstore.rook-ceph.svc.cluster.local
            - name: S3_BUCKET_NAME
              value: open-webui-files
            - name: S3_REGION_NAME
              value: us-east-1
            - name: S3_KEY_PREFIX
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  key: RAG_OPENAI_API_KEY
                  name: open-webui-secrets
          image: ghcr.io/open-webui/open-webui:v0.6.43@sha256:9cb724e0bc84f05ba2f81a3da5f53f5add07e1001065d83f3b6b70b9a9eeef19
          imagePullPolicy: IfNotPresent
          name: open-webui
          ports:
            - containerPort: 8080
              name: http
          tty: true
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
      enableServiceLinks: false
      serviceAccountName: open-webui
      volumes:
        - emptyDir: {}
          name: data
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/version: 0.6.26
    helm.sh/chart: open-webui-8.1.0
  name: open-webui
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/version: 0.6.26
    helm.sh/chart: open-webui-8.1.0
  name: open-webui
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: openwebui.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - openwebui.josevictor.me
      secretName: wildcard-tls
